--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,19 @@
 {
+  "$schema": "https://json.schemastore.org/chrome-manifest",
+  "manifest_version": 3,
   "name": "Scryfall Context Menu",
   "description": "Search Magic: the Gathering cards with Scryfall by using the context menu.",
-  "version": "0.3.0",
-  "permissions": ["contextMenus"],
-  "background": {
-    "scripts": ["index.js"]
-  },
+  "version": "0.4.0",
   "icons": {
     "16": "icon-16.png",
     "32": "icon-32.png",
     "512": "icon-512.png"
   },
-  "manifest_version": 2
+  "permissions": [
+    "contextMenus"
+  ],
+  "background": {
+    "service_worker": "background.js",
+    "type": "module"
+  }
 }
