--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
   "$schema": "https://json.schemastore.org/chrome-manifest",
   "manifest_version": 3,
   "name": "Scryfall Context Menu",
-  "description": "Search Magic: the Gathering cards with Scryfall by using the context menu.",
-  "version": "0.4.0",
+  "description": "Search Magic: the Gathering cards with Scryfall by using the context menu or the omnibox.",
+  "version": "1.0.0",
   "icons": {
     "16": "icon-16.png",
     "48": "icon-48.png",
@@ -15,5 +15,8 @@
   "background": {
     "service_worker": "background.js",
     "type": "module"
+  },
+  "omnibox": {
+    "keyword": "scry"
   }
 }
